--- a/testimony.html
+++ b/testimony.html
@@ -12,22 +12,15 @@
             <a href="#"><img src="img/logo.png" class="logo" alt="Logo"></a>
             <div class="navbar-container">
                 <ul id="navbar">
-                    <li><a class="active" href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="products.html">Products</a></li>
-                    <li><a href="testimony.html">Testimony</a></li>
+                    <li><a class="active" href="testimony.html">Testimony</a></li>
                     <li><a href="aboutUs.html">About Us</a></li>
                     <li><a href="register.html">Register</a></li>
                 </ul>
             </div>
         </section>
 
-        <section id="main-content">
-             <h2>Bringing Fresh, Homecooked Food to Your Doorsteps</h2>
-        </section>
-
-        <section id="specialty">
-            <h1>Our Specialty</h1>
-
-        </section>
+        
     </body>
 </html>
