--- a/register.html
+++ b/register.html
@@ -7,20 +7,9 @@
         <link href="style.css" rel="stylesheet">
         <title>Home</title>
     </head>
-    <body>
-        <section id="header">
-            <a href="#"><img src="img/logo.png" class="logo" alt="Logo"></a>
-            <div class="navbar-container">
-                <ul id="navbar">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="testimony.html">Testimony</a></li>
-                    <li><a href="aboutUs.html">About Us</a></li>
-                    <li><a class="active" href="register.html">Register</a></li>
-                </ul>
-            </div>
-        </section>
-
-        
+    <body id="register">
+        <div class="box">
+           
+        </div>
     </body>
 </html>
