--- a/index.html
+++ b/index.html
@@ -59,8 +59,75 @@
                     </div>
                 </div>
             </div>
-
         </section>
+
+        <h1>This Weekend's Promos</h1>
+
+        <section id="container">
+            <div class="slider-wrapper">
+                <div class="slider">
+                    <div class="dish-section" class="slide-1">
+                        <h2 class="dish-heading">Delicious Dish</h2>
+                        <div class="dish-wrapper">
+                            <div class="dish-image-container">
+                                <img src="img/ButterChicken.jpeg" alt="Dish Image" class="dish-photo">
+                                <p class="dish-prices">
+                                    <span class="old-price">$25.00</span>
+                                    <span class="new-price">$20.00</span>
+                                </p>
+                            </div>
+                            <p class="dish-details">A mouth-watering description of the dish goes here.</p>
+                        </div>
+                        <img src="img/logo.png" alt="Logo" class="bottom-logo">
+                    </div>
+
+                    <div class="dish-section" class="slide-2">
+                        <h2 class="dish-heading">Delicious Dish</h2>
+                        <div class="dish-wrapper">
+                            <div class="dish-image-container">
+                                <img src="img/ButterChicken.jpeg" alt="Dish Image" class="dish-photo">
+                                <p class="dish-prices">
+                                    <span class="old-price">$25.00</span>
+                                    <span class="new-price">$20.00</span>
+                                </p>
+                            </div>
+                            <p class="dish-details">A mouth-watering description of the dish goes here.</p>
+                        </div>
+                        <img src="img/logo.png" alt="Logo" class="bottom-logo">
+                    </div>
+
+                    <div class="dish-section" class="slide-3">
+                        <h2 class="dish-heading">Delicious Dish</h2>
+                        <div class="dish-wrapper">
+                            <div class="dish-image-container">
+                                <img src="img/ButterChicken.jpeg" alt="Dish Image" class="dish-photo">
+                                <p class="dish-prices">
+                                    <span class="old-price">$25.00</span>
+                                    <span class="new-price">$20.00</span>
+                                </p>
+                            </div>
+                            <p class="dish-details">A mouth-watering description of the dish goes here.</p>
+                        </div>
+                        <img src="img/logo.png" alt="Logo" class="bottom-logo">
+                    </div>
+                    <div class="slider-nav">
+                        <a href="#slide-1"></a>
+                        <a href="#slide-2"></a>
+                        <a href="#slide-3"></a>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <div id="gap"></div>
+        <footer>
+            <div class="footer-container">
+              <h1>Brief Info</h1>
+              <p>Number: 081249395409</p>
+              <p>Address: Jakarta road No. 7</p>
+              <p>Email: cateringzz@email.co.id</p>
+            </div>
+            <img src="img/whitelogo.png" alt="Company Logo" class="logo">
+          </footer>
         
     </body> 
 </html>
