--- a/aboutUs.html
+++ b/aboutUs.html
@@ -16,7 +16,7 @@
                     <li><a href="products.html">Products</a></li>
                     <li><a href="testimony.html">Testimony</a></li>
                     <li><a class="active" href="aboutUs.html">About Us</a></li>
-                    <li><a href="register.html">Register</a></li>
+                    <li><a class="register" href="register.html">Register</a></li>
                 </ul>
             </div>
         </section>
