--- a/products.html
+++ b/products.html
@@ -16,7 +16,7 @@
                     <li><a class="active" href="products.html">Products</a></li>
                     <li><a href="testimony.html">Testimony</a></li>
                     <li><a href="aboutUs.html">About Us</a></li>
-                    <li><a href="register.html">Register</a></li>
+                    <li><a class="register" href="register.html">Register</a></li>
                 </ul>
             </div>
         </section>
