--- a/register.html
+++ b/register.html
@@ -1,15 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&display=swap" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
-        <title>Home</title>
-    </head>
-    <body id="register">
-        <div class="box">
-           
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <title>Register</title>
+</head>
+<body id="register">
+    <div class="box">
+        <h1>Welcome to Cateringz</h1>
+        <div class="container">
+            <form id="registerForm" onsubmit="return validateForm(event)">
+                <label for="username">Username:</label>
+                <input type="text" id="username" name="username" required>
+                <div id="usernameError" class="error"></div>
+
+                <label for="email">Email:</label>
+                <input type="email" id="email" name="email" required>
+                <div id="emailError" class="error"></div>
+
+                <label for="address">Address:</label>
+                <input type="text" id="address" name="address" required>
+                <div id="addressError" class="error"></div>
+
+                <label for="dob">Date of Birth:</label>
+                <input type="date" id="dob" name="dob" required>
+                <div id="dobError" class="error"></div>
+
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required>
+                <div id="passwordError" class="error"></div>
+
+                <label for="gender">Gender:</label>
+                <select id="gender" name="gender" required>
+                    <option value="">Select your gender</option>
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                </select>
+                <div id="genderError" class="error"></div>
+
+                <label>
+                    <input type="checkbox" id="privacy" name="privacy" required>
+                    I agree to the privacy policy
+                </label>
+                <div id="privacyError" class="error"></div>
+
+                <button class="button-submit" type="submit">Submit</button>
+            </form>
         </div>
-    </body>
+    </div>
+    <script src="script.js"></script>
+</body>
 </html>
