--- a/register.html
+++ b/register.html
@@ -9,7 +9,10 @@
 </head>
 <body id="register">
     <div class="box">
-        <h1>Welcome to Cateringz</h1>
+        <div class="header">
+            <h1>Welcome to Cateringz</h1>
+            <img src="img/whitelogo.png" alt="logo">
+        </div>
         <div class="container">
             <form id="registerForm" onsubmit="return validateForm(event)">
                 <label for="username">Username:</label>
