--- a/products.html
+++ b/products.html
@@ -1,26 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&display=swap" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
-        <title>Home</title>
-    </head>
-    <body>
-        <section id="header">
-            <a href="#"><img src="img/logo.png" class="logo" alt="Logo"></a>
-            <div class="navbar-container">
-                <ul id="navbar">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a class="active" href="products.html">Products</a></li>
-                    <li><a href="testimony.html">Testimony</a></li>
-                    <li><a href="aboutUs.html">About Us</a></li>
-                    <li><a class="register" href="register.html">Register</a></li>
-                </ul>
-            </div>
-        </section>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <title>Products</title>
+</head>
+<body>
+    <section id="header">
+        <a href="#"><img src="img/logo.png" class="logo" alt="Logo"></a>
+        <div class="navbar-container">
+            <ul id="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a class="active" href="products.html">Products</a></li>
+                <li><a href="testimony.html">Testimony</a></li>
+                <li><a href="aboutUs.html">About Us</a></li>
+                <li><a class="register" href="register.html">Register</a></li>
+            </ul>
+        </div>
+    </section>
 
-        
-    </body>
+    <section id="search-bar">
+        <div class="search-container">
+            <input type="text" placeholder="Search for products...">
+            <button type="button"><img src="img/search.png" alt="Search"></button>
+        </div>
+    </section>
+
+    <section id="products">
+        <h1>Our Products</h1>
+        <div class="product-container">
+            <div class="product">
+                <img src="img/ButterChicken.jpeg" alt="Butter Chicken" class="product-image">
+                <h2>Butter Chicken</h2>
+                <p>A rich, creamy dish made with tender chicken pieces and aromatic spices.</p>
+                <a href="#" class="order-button">Order Now</a>
+            </div>
+            <div class="product">
+                <img src="img/spaghetti.jpeg" alt="Spaghetti Bologna" class="product-image">
+                <h2>Spaghetti Bologna</h2>
+                <p>Classic Italian spaghetti with a hearty Bolognese sauce made from prime quality meat.</p>
+                <a href="#" class="order-button">Order Now</a>
+            </div>
+            <div class="product">
+                <img src="img/cCordonBleu.jpeg" alt="Chicken Cordon Bleu" class="product-image">
+                <h2>Chicken Cordon Bleu</h2>
+                <p>Tender chicken breast filled with ham and cheese, coated in golden breadcrumbs.</p>
+                <a href="#" class="order-button">Order Now</a>
+            </div>
+            <div class="product">
+                <img src="img/mac.jpeg" alt="Mac and Cheese" class="product-image">
+                <h2>Mac and Cheese</h2>
+                <p>Creamy and cheesy macaroni pasta, a comfort food favorite.</p>
+                <a href="#" class="order-button">Order Now</a>
+            </div>
+            <div class="product">
+                <img src="img/shawarma.jpeg" alt="Chicken Shawarma" class="product-image">
+                <h2>Chicken Shawarma</h2>
+                <p>Marinated chicken wrapped in a pita with fresh vegetables and sauce.</p>
+                <a href="#" class="order-button">Order Now</a>
+            </div>
+            <div class="product">
+                <img src="img/beefStroganoff.jpeg" alt="Beef Stroganoff" class="product-image">
+                <h2>Beef Stroganoff</h2>
+                <p>Tender beef strips in a creamy mushroom sauce, served over noodles.</p>
+                <a href="#" class="order-button">Order Now</a>
+            </div>
+            <div class="product">
+                <img src="img/porridge.jpeg" alt="Chicken Porridge" class="product-image">
+                <h2>Chicken Porridge</h2>
+                <p>Warm, comforting porridge made with tender chicken and flavorful broth.</p>
+                <a href="#" class="order-button">Order Now</a>
+            </div>
+            <div class="product">
+                <img src="img/lasagna.jpeg" alt="Lasagna" class="product-image">
+                <h2>Lasagna</h2>
+                <p>Layers of pasta, rich meat sauce, and creamy cheese, baked to perfection.</p>
+                <a href="#" class="order-button">Order Now</a>
+            </div>
+            <div class="product">
+                <img src="img/chickenMarsala.jpeg" alt="Chicken Marsala" class="product-image">
+                <h2>Chicken Marsala</h2>
+                <p>Succulent chicken breasts in a rich Marsala wine sauce with mushrooms.</p>
+                <a href="#" class="order-button">Order Now</a>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-container">
+            <h1>Brief Info</h1>
+            <p>Number: 081249395409</p>
+            <p>Address: Jakarta road No. 7</p>
+            <p>Email: cateringzz@email.co.id</p>
+        </div>
+        <img src="img/whitelogo.png" alt="Company Logo" class="logo">
+    </footer>
+
+</body>
 </html>
