--- a/testimony.html
+++ b/testimony.html
@@ -1,26 +1,110 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&display=swap" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
-        <title>Home</title>
-    </head>
-    <body>
-        <section id="header">
-            <a href="#"><img src="img/logo.png" class="logo" alt="Logo"></a>
-            <div class="navbar-container">
-                <ul id="navbar">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a class="active" href="testimony.html">Testimony</a></li>
-                    <li><a href="aboutUs.html">About Us</a></li>
-                    <li><a class="register" href="register.html">Register</a></li>
-                </ul>
-            </div>
-        </section>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <title>Testimonies</title>
+</head>
+<body>
+    <section id="header">
+        <a href="#"><img src="img/logo.png" class="logo" alt="Logo"></a>
+        <div class="navbar-container">
+            <ul id="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a class="active" href="testimony.html">Testimony</a></li>
+                <li><a href="aboutUs.html">About Us</a></li>
+                <li><a class="register" href="register.html">Register</a></li>
+            </ul>
+        </div>
+    </section>
 
-        
-    </body>
+    <section id="testimonies">
+        <h1>What Our Clients Say</h1>
+        <div class="testimony-container">
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>James</h2>
+                </div>
+                <p>The food was absolutely amazing and the service impeccable. Our event was a hit thanks to CAterinNgz.</p>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>Maria L.</h2>
+                </div>
+                <p>We hired CAterinNgz for a corporate event, and they exceeded all expectations. The menu was diverse and delicious, and the team was professional and attentive.</p>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>Aditya R.</h2>
+                </div>
+                <p>I can't say enough good things about CAterinNgz. They catered our family reunion, and everyone loved the homecooked flavors. The team was friendly and accommodating.</p>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>Linda M.</h2>
+                </div>
+                <p>The best catering service we've ever used! CAterinNgz delivered amazing food for our company's holiday party. Everything was on point, from the appetizers to the desserts.</p>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>Hadi T.</h2>
+                </div>
+                <p>From start to finish, CAterinNgz made our event a breeze. The food was incredible, and the presentation was stunning. They really went above and beyond.</p>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>John S.</h2>
+                </div>
+                <p>CAterinNgz made our wedding reception unforgettable! The food was phenomenal and the service impeccable. Our guests couldn't stop raving about the dishes.</p>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>Dewi P.</h2>
+                </div>
+                <p>The birthday party was a huge success thanks to CAterinNgz. The food was fresh, beautifully presented, and absolutely mouth-watering. Will definitely use them again!</p>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>Siti K.</h2>
+                </div>
+                <p>CAterinNgz provided catering for our anniversary celebration, and it was perfect. The dishes were creative and delicious, showcasing the best local ingredients. Highly recommend!</p>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>Rina A.</h2>
+                </div>
+                <p>CAterinNgz took care of everything for our baby shower. The food was fresh, tasty, and beautifully arranged. The team was super friendly and professional.</p>
+            </div>
+            <div class="testimony-card">
+                <div class="testimony-header">
+                    <div class="avatar"></div>
+                    <h2>Nina W.</h2>
+                </div>
+                <p>We had CAterinNgz cater our graduation party, and it was a hit! The dishes were flavorful and made with high-quality ingredients. Everyone was asking for their contact info.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-container">
+            <h1>Brief Info</h1>
+            <p>Number: 081249395409</p>
+            <p>Address: Jakarta road No. 7</p>
+            <p>Email: cateringzz@email.co.id</p>
+        </div>
+        <img src="img/whitelogo.png" alt="Company Logo" class="logo">
+    </footer>
+</body>
 </html>
