--- a/aboutUs.html
+++ b/aboutUs.html
@@ -1,26 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&display=swap" rel="stylesheet">
-        <link href="style.css" rel="stylesheet">
-        <title>Home</title>
-    </head>
-    <body>
-        <section id="header">
-            <a href="#"><img src="img/logo.png" class="logo" alt="Logo"></a>
-            <div class="navbar-container">
-                <ul id="navbar">
-                    <li><a href="index.html">Home</a></li>
-                    <li><a href="products.html">Products</a></li>
-                    <li><a href="testimony.html">Testimony</a></li>
-                    <li><a class="active" href="aboutUs.html">About Us</a></li>
-                    <li><a class="register" href="register.html">Register</a></li>
-                </ul>
-            </div>
-        </section>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Averia+Serif+Libre:wght@400;700&display=swap" rel="stylesheet">
+    <link href="style.css" rel="stylesheet">
+    <title>About Us - CATERINGZ</title>
+</head>
+<body>
+    <section id="header">
+        <a href="#"><img src="img/logo.png" class="logo" alt="Logo"></a>
+        <div class="navbar-container">
+            <ul id="navbar">
+                <li><a href="index.html">Home</a></li>
+                <li><a href="products.html">Products</a></li>
+                <li><a href="testimony.html">Testimony</a></li>
+                <li><a class="active" href="aboutUs.html">About Us</a></li>
+                <li><a class="register" href="register.html">Register</a></li>
+            </ul>
+        </div>
+    </section>
 
+    <section id="about-us">
+        <div class="section-title">Delicious Homemade Culinary Experiences</div>
+        <div class="image-gallery">
+            <img src="img/ButterChicken.jpeg" alt="Dish Image 1" class="gallery-image">
+            <img src="img/spaghetti.jpeg" alt="Dish Image 2" class="gallery-image">
+            <img src="img/cCordonBleu.jpeg" alt="Dish Image 3" class="gallery-image">
+        </div>
         
-    </body>
+        <div class="about-content">
+            <div class="section-title">Our Story</div>
+            <p>From a small kitchen to the heart of your events, CATERINGZ offers fresh, homemade food crafted with the finest local ingredients. Learn more about our journey and values.</p>
+        </div>
+
+        <div class="services-content">
+            <div class="section-title">Our Services</div>
+            <ul>
+                <li>Event Catering</li>
+                <li>Custom Menus</li>
+                <li>Seasonal Specials</li>
+            </ul>
+        </div>
+
+        <div class="testimonial-content">
+            <div class="section-title">What Our Clients Say</div>
+            <p>"The food was absolutely amazing and the service impeccable. Our event was a hit thanks to CATERINGZ!" - James</p>
+        </div>
+    </section>
+
+    <footer>
+        <div class="footer-container">
+            <div class="section-title">Brief Info</div>
+            <p>Number: 081249395409</p>
+            <p>Address: Jakarta road No. 7</p>
+            <p>Email: cateringzz@email.co.id</p>
+        </div>
+        <img src="img/whitelogo.png" alt="Company Logo" class="logo">
+    </footer>
+</body>
 </html>
